--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Oswald:400&display=swa);
 
 body * {
@@ -15,6 +14,7 @@ body {
 
 body,
 html,
+#app,
 main {
     height: 100%;
     margin: 0;
@@ -26,6 +26,15 @@ main {
 .carousel-item,
 .carousel-item.active {
     height: 100vh;
+}
+
+/* Login */
+.fondoLogin {
+    height: calc(100% - 75px);
+    /* background-image: url("../../../assets/images/fondoLogin.webp"); */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 #player {
