Hacer vistas registro, login, eventos y ranking

--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -13,7 +13,7 @@
       <div id="wrapper1" class="swiper-wrapper">
         <!-- Iteración sobre los datos de las cartas -->
         <div class="swiper-slide" *ngFor="let numero of numeros"
-          style="background: linear-gradient(to top, #27270f99, #203a4300, #2c536400), url('../images/{{ numero }}.webp') no-repeat 50% 50% / contain #d4ab30;"
+          style="background: linear-gradient(to top, #27270f99, #203a4300, #2c536400), url('assets/images/{{ numero }}.webp') no-repeat 50% 50% / contain #d4ab30;"
           >
         </div>
       </div>
@@ -33,3 +33,4 @@
     <li></li>
   </ul>
 </section>
+
