--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <section class="bg-black">
   <div class="container">
-    <footer class="py-5 my-4">
+    <footer class="py-5">
       <div class="row justify-content-center mb-3">
         <ul class="col-2 list-unstyled d-flex justify-content-between">
           <li class="bg-dark bg-gradient rounded rounded-circle p-2"><a href="https://twitter.com/" target="_blank"><svg
@@ -41,13 +41,13 @@
 
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="https://pegi.info/" target="_blank" class="nav-link px-2"><img
-              src="asset/images/pegi7.webp" alt="PEGI 7" height="100px"
+              src="assets/images/pegi7.webp" alt="PEGI 7" height="100px"
               class="border border-5 border-dark"></a></li>
         <li class="nav-item"><a href="https://pegi.info/" target="_blank" class="nav-link px-2"><img
-              src="asset/images/violence-black-EN.webp" alt="Violencia" height="100px"
+              src="assets/images/violence-black-EN.webp" alt="Violencia" height="100px"
               class="border border-5 border-dark"></a></li>
         <li class="nav-item"><a href="https://pegi.info/" target="_blank" class="nav-link px-2"><img
-              src="asset/images/fear-black-EN.webp" alt="Miedo" height="100px"
+              src="assets/images/fear-black-EN.webp" alt="Miedo" height="100px"
               class="border border-5 border-dark"></a></li>
       </ul>
       <p class="text-center text-white">&copy; 2024 Gwent, Inc</p>
