--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -10,7 +10,7 @@
               placeholder="Nombre de usuario" autofocus>
           </div>
           <div class="input-group">
-            <input type="email" class="input--style-3" formControlName="emai" name="email" required
+            <input type="email" class="input--style-3" formControlName="email" name="email" required
               placeholder="Correo electrónico">
           </div>
           <div class="input-group">
