--- a/src/app/components/auth/login/login.component.css
+++ b/src/app/components/auth/login/login.component.css
@@ -3,7 +3,7 @@ main {
   background-image: url("../../../../assets/images/fondo.webp");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100%;
+  height: 100%;
 }
 
 .fondoLogin {
